save change previus delete

--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,20 @@
         <li class="c-menu__item"><a class="c-menu__link" href="#fourth">Fourth link</a></li>
       </ul>
     </nav>
-  </header>
-  ref_: https://dribbble.com/shots/14731228-VOLCHOK-Fashion-Brand-Website
-  <img src="https://cdn.dribbble.com/users/110372/screenshots/14731228/media/4a7ecd5f98fd2e77b462d8728bfd291d.png" alt="">
+  </header> 
   
+  <section class="hero hero__large-text" style="--hero-bg:url(none)">    <!-- [TODO] : probar en la tienda-->
+    <div class="hero__overlay"></div> <!-- [TODO] : after del anterior-->
+    <div class="hero__container">
+      <h2 class="hero__claim">claim</h2>
+      <h3 class="hero__title">title</h3>
+      <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum assumenda placeat voluptas officiis ipsum quibusdam cupiditate.</p>
+      <a href="#go" class="btn">comprar</a>
+    </div>
+</section>
+
+  <p>ref_: https://dribbble.com/shots/14731228-VOLCHOK-Fashion-Brand-Website</p>
+  <img src="https://cdn.dribbble.com/users/110372/screenshots/14731228/media/4a7ecd5f98fd2e77b462d8728bfd291d.png" alt="">
   
   <script src="./app.js" charset="utf-8"></script>
 </body>
